// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Form Descriptors Snapshot Tests > Dashboard Forms > should generate stable view form descriptor > dashboard-view-form-descriptor 1`] = `
{
  "contract": "Dashboard",
  "sections": [
    {
      "fields": [
        {
          "constraints": undefined,
          "description": "Dashboard aggregates (counts, totals)",
          "fieldName": "aggregates",
          "label": "Aggregates",
          "layout": undefined,
          "readonly": true,
          "required": true,
          "type": "object",
          "widget": "textarea",
        },
        {
          "constraints": undefined,
          "description": "When dashboard was generated",
          "fieldName": "generatedAt",
          "label": "Generated At",
          "layout": undefined,
          "readonly": true,
          "required": true,
          "type": "datetime",
          "widget": "datetime-local",
        },
      ],
      "id": "overview",
      "layout": undefined,
      "title": "Overview",
    },
    {
      "fields": [
        {
          "constraints": undefined,
          "description": "Invariants status section",
          "fieldName": "invariantsStatus",
          "label": "Invariants Status",
          "layout": undefined,
          "readonly": true,
          "required": true,
          "type": "object",
          "widget": "textarea",
        },
        {
          "constraints": undefined,
          "description": "Contract health section",
          "fieldName": "contractHealth",
          "label": "Contract Health",
          "layout": undefined,
          "readonly": true,
          "required": true,
          "type": "object",
          "widget": "textarea",
        },
      ],
      "id": "status",
      "layout": undefined,
      "title": "Status",
    },
    {
      "fields": [
        {
          "constraints": undefined,
          "description": "Ledger flow section",
          "fieldName": "ledgerFlow",
          "label": "Ledger Flow",
          "layout": undefined,
          "readonly": true,
          "required": true,
          "type": "object",
          "widget": "textarea",
        },
        {
          "constraints": undefined,
          "description": "Reconciliation queue section",
          "fieldName": "reconciliationQueue",
          "label": "Reconciliation Queue",
          "layout": undefined,
          "readonly": true,
          "required": true,
          "type": "object",
          "widget": "textarea",
        },
        {
          "constraints": undefined,
          "description": "Projection freshness section",
          "fieldName": "projectionFreshness",
          "label": "Projection Freshness",
          "layout": undefined,
          "readonly": true,
          "required": true,
          "type": "object",
          "widget": "textarea",
        },
      ],
      "id": "flows",
      "layout": undefined,
      "title": "Flows",
    },
  ],
  "variant": "view",
}
`;

exports[`Form Descriptors Snapshot Tests > LedgerEntry Forms > should generate stable edit form descriptor > ledger-entry-edit-form-descriptor 1`] = `
{
  "contract": "LedgerEntry",
  "sections": [
    {
      "fields": [
        {
          "constraints": undefined,
          "description": "Node ID this entry belongs to (TEXT in DB)",
          "fieldName": "nodeId",
          "label": "Node Id",
          "layout": undefined,
          "readonly": false,
          "required": true,
          "type": "string",
          "widget": "text",
        },
        {
          "constraints": undefined,
          "description": "Action type (e.g., "node_created", "reflect")",
          "fieldName": "action",
          "label": "Action",
          "layout": undefined,
          "readonly": false,
          "required": true,
          "type": "string",
          "widget": "text",
        },
        {
          "constraints": undefined,
          "description": "Entry timestamp",
          "fieldName": "timestamp",
          "label": "Timestamp",
          "layout": undefined,
          "readonly": true,
          "required": true,
          "type": "datetime",
          "widget": "datetime-local",
        },
      ],
      "id": "general",
      "layout": undefined,
      "title": "General",
    },
    {
      "fields": [
        {
          "constraints": undefined,
          "description": "Action payload (record of unknown values)",
          "fieldName": "payload",
          "label": "Payload",
          "layout": undefined,
          "readonly": false,
          "required": true,
          "type": "record",
          "widget": "textarea",
        },
      ],
      "id": "payload",
      "layout": undefined,
      "title": "Payload",
    },
    {
      "fields": [
        {
          "constraints": undefined,
          "description": "Parent entry ID in causal chain",
          "fieldName": "parentEntryId",
          "label": "Parent Entry Id",
          "layout": undefined,
          "readonly": true,
          "required": false,
          "type": "uuid",
          "widget": "text",
        },
        {
          "constraints": undefined,
          "description": "Branch identifier (default: "main")",
          "fieldName": "branchId",
          "label": "Branch Id",
          "layout": undefined,
          "readonly": false,
          "required": true,
          "type": "string",
          "widget": "text",
        },
        {
          "constraints": undefined,
          "description": "Correlation ID for tracing",
          "fieldName": "correlationId",
          "label": "Correlation Id",
          "layout": undefined,
          "readonly": false,
          "required": false,
          "type": "string",
          "widget": "text",
        },
        {
          "constraints": undefined,
          "description": "Causal chain ID",
          "fieldName": "causalChainId",
          "label": "Causal Chain Id",
          "layout": undefined,
          "readonly": false,
          "required": false,
          "type": "string",
          "widget": "text",
        },
      ],
      "id": "causal",
      "layout": undefined,
      "title": "Causal Chain",
    },
    {
      "fields": [
        {
          "constraints": undefined,
          "description": "True if this entry is branch root",
          "fieldName": "isBranchRoot",
          "label": "Is Branch Root",
          "layout": undefined,
          "readonly": false,
          "required": true,
          "type": "boolean",
          "widget": "checkbox",
        },
        {
          "constraints": undefined,
          "description": "True if branch has been merged",
          "fieldName": "isMerged",
          "label": "Is Merged",
          "layout": undefined,
          "readonly": false,
          "required": true,
          "type": "boolean",
          "widget": "checkbox",
        },
        {
          "constraints": undefined,
          "description": "Branch this was merged into",
          "fieldName": "mergedIntoBranchId",
          "label": "Merged Into Branch Id",
          "layout": undefined,
          "readonly": false,
          "required": false,
          "type": "string",
          "widget": "text",
        },
        {
          "constraints": undefined,
          "description": "Entry ID in target branch after merge",
          "fieldName": "mergedEntryId",
          "label": "Merged Entry Id",
          "layout": undefined,
          "readonly": true,
          "required": false,
          "type": "uuid",
          "widget": "text",
        },
      ],
      "id": "branch",
      "layout": undefined,
      "title": "Branch Information",
    },
  ],
  "variant": "edit",
}
`;

exports[`Form Descriptors Snapshot Tests > LedgerEntry Forms > should generate stable view form descriptor > ledger-entry-view-form-descriptor 1`] = `
{
  "contract": "LedgerEntry",
  "sections": [
    {
      "fields": [
        {
          "constraints": undefined,
          "description": "Unique identifier for the ledger entry",
          "fieldName": "id",
          "label": "Id",
          "layout": undefined,
          "readonly": true,
          "required": true,
          "type": "uuid",
          "widget": "text",
        },
        {
          "constraints": undefined,
          "description": "Node ID this entry belongs to (TEXT in DB)",
          "fieldName": "nodeId",
          "label": "Node Id",
          "layout": undefined,
          "readonly": false,
          "required": true,
          "type": "string",
          "widget": "text",
        },
        {
          "constraints": undefined,
          "description": "Action type (e.g., "node_created", "reflect")",
          "fieldName": "action",
          "label": "Action",
          "layout": undefined,
          "readonly": false,
          "required": true,
          "type": "string",
          "widget": "text",
        },
        {
          "constraints": undefined,
          "description": "Entry timestamp",
          "fieldName": "timestamp",
          "label": "Timestamp",
          "layout": undefined,
          "readonly": true,
          "required": true,
          "type": "datetime",
          "widget": "datetime-local",
        },
      ],
      "id": "general",
      "layout": undefined,
      "title": "General",
    },
    {
      "fields": [
        {
          "constraints": undefined,
          "description": "Action payload (record of unknown values)",
          "fieldName": "payload",
          "label": "Payload",
          "layout": undefined,
          "readonly": false,
          "required": true,
          "type": "record",
          "widget": "textarea",
        },
      ],
      "id": "payload",
      "layout": undefined,
      "title": "Payload",
    },
    {
      "fields": [
        {
          "constraints": undefined,
          "description": "Parent entry ID in causal chain",
          "fieldName": "parentEntryId",
          "label": "Parent Entry Id",
          "layout": undefined,
          "readonly": true,
          "required": false,
          "type": "uuid",
          "widget": "text",
        },
        {
          "constraints": undefined,
          "description": "Branch identifier (default: "main")",
          "fieldName": "branchId",
          "label": "Branch Id",
          "layout": undefined,
          "readonly": false,
          "required": true,
          "type": "string",
          "widget": "text",
        },
        {
          "constraints": undefined,
          "description": "Correlation ID for tracing",
          "fieldName": "correlationId",
          "label": "Correlation Id",
          "layout": undefined,
          "readonly": false,
          "required": false,
          "type": "string",
          "widget": "text",
        },
        {
          "constraints": undefined,
          "description": "Causal chain ID",
          "fieldName": "causalChainId",
          "label": "Causal Chain Id",
          "layout": undefined,
          "readonly": false,
          "required": false,
          "type": "string",
          "widget": "text",
        },
      ],
      "id": "causal",
      "layout": undefined,
      "title": "Causal Chain",
    },
    {
      "fields": [
        {
          "constraints": undefined,
          "description": "True if this entry is branch root",
          "fieldName": "isBranchRoot",
          "label": "Is Branch Root",
          "layout": undefined,
          "readonly": false,
          "required": true,
          "type": "boolean",
          "widget": "checkbox",
        },
        {
          "constraints": undefined,
          "description": "True if branch has been merged",
          "fieldName": "isMerged",
          "label": "Is Merged",
          "layout": undefined,
          "readonly": false,
          "required": true,
          "type": "boolean",
          "widget": "checkbox",
        },
        {
          "constraints": undefined,
          "description": "Branch this was merged into",
          "fieldName": "mergedIntoBranchId",
          "label": "Merged Into Branch Id",
          "layout": undefined,
          "readonly": false,
          "required": false,
          "type": "string",
          "widget": "text",
        },
        {
          "constraints": undefined,
          "description": "Entry ID in target branch after merge",
          "fieldName": "mergedEntryId",
          "label": "Merged Entry Id",
          "layout": undefined,
          "readonly": true,
          "required": false,
          "type": "uuid",
          "widget": "text",
        },
      ],
      "id": "branch",
      "layout": undefined,
      "title": "Branch Information",
    },
  ],
  "variant": "view",
}
`;

exports[`Form Descriptors Snapshot Tests > Node Forms > should generate stable edit form descriptor > node-edit-form-descriptor 1`] = `
{
  "contract": "Node",
  "sections": [
    {
      "fields": [
        {
          "constraints": {
            "minLength": 1,
          },
          "description": "Node name/content",
          "fieldName": "name",
          "label": "Name",
          "layout": undefined,
          "readonly": false,
          "required": true,
          "type": "string",
          "widget": "text",
        },
        {
          "constraints": undefined,
          "description": "Parent node ID (null for root nodes)",
          "fieldName": "parent_id",
          "label": "Parent_id",
          "layout": undefined,
          "readonly": false,
          "required": false,
          "type": "uuid",
          "widget": "text",
        },
      ],
      "id": "general",
      "layout": undefined,
      "title": "General",
    },
    {
      "fields": [
        {
          "constraints": undefined,
          "description": "Unique identifier for the node",
          "fieldName": "id",
          "label": "Id",
          "layout": undefined,
          "readonly": false,
          "required": true,
          "type": "uuid",
          "widget": "text",
        },
        {
          "constraints": {
            "minLength": 1,
          },
          "description": "Hierarchical path (ltree format)",
          "fieldName": "path",
          "label": "Path",
          "layout": undefined,
          "readonly": false,
          "required": true,
          "type": "string",
          "widget": "text",
        },
        {
          "constraints": {
            "minLength": 0,
          },
          "description": "Depth in hierarchy (0 for root nodes)",
          "fieldName": "depth",
          "label": "Depth",
          "layout": undefined,
          "readonly": false,
          "required": true,
          "type": "number",
          "widget": "number",
        },
        {
          "constraints": undefined,
          "description": "Creation timestamp",
          "fieldName": "created_at",
          "label": "Created_at",
          "layout": undefined,
          "readonly": false,
          "required": true,
          "type": "datetime",
          "widget": "datetime-local",
        },
        {
          "constraints": undefined,
          "description": "Last update timestamp",
          "fieldName": "updated_at",
          "label": "Updated_at",
          "layout": undefined,
          "readonly": false,
          "required": true,
          "type": "datetime",
          "widget": "datetime-local",
        },
      ],
      "id": "metadata",
      "layout": undefined,
      "title": "Metadata",
    },
  ],
  "variant": "edit",
}
`;

exports[`Form Descriptors Snapshot Tests > Node Forms > should generate stable view form descriptor > node-view-form-descriptor 1`] = `
{
  "contract": "Node",
  "sections": [
    {
      "fields": [
        {
          "constraints": {
            "minLength": 1,
          },
          "description": "Node name/content",
          "fieldName": "name",
          "label": "Name",
          "layout": undefined,
          "readonly": false,
          "required": true,
          "type": "string",
          "widget": "text",
        },
        {
          "constraints": undefined,
          "description": "Parent node ID (null for root nodes)",
          "fieldName": "parent_id",
          "label": "Parent_id",
          "layout": undefined,
          "readonly": false,
          "required": false,
          "type": "uuid",
          "widget": "text",
        },
      ],
      "id": "general",
      "layout": undefined,
      "title": "General",
    },
    {
      "fields": [
        {
          "constraints": undefined,
          "description": "Unique identifier for the node",
          "fieldName": "id",
          "label": "Id",
          "layout": undefined,
          "readonly": false,
          "required": true,
          "type": "uuid",
          "widget": "text",
        },
        {
          "constraints": {
            "minLength": 1,
          },
          "description": "Hierarchical path (ltree format)",
          "fieldName": "path",
          "label": "Path",
          "layout": undefined,
          "readonly": false,
          "required": true,
          "type": "string",
          "widget": "text",
        },
        {
          "constraints": {
            "minLength": 0,
          },
          "description": "Depth in hierarchy (0 for root nodes)",
          "fieldName": "depth",
          "label": "Depth",
          "layout": undefined,
          "readonly": false,
          "required": true,
          "type": "number",
          "widget": "number",
        },
        {
          "constraints": undefined,
          "description": "Creation timestamp",
          "fieldName": "created_at",
          "label": "Created_at",
          "layout": undefined,
          "readonly": false,
          "required": true,
          "type": "datetime",
          "widget": "datetime-local",
        },
        {
          "constraints": undefined,
          "description": "Last update timestamp",
          "fieldName": "updated_at",
          "label": "Updated_at",
          "layout": undefined,
          "readonly": false,
          "required": true,
          "type": "datetime",
          "widget": "datetime-local",
        },
      ],
      "id": "metadata",
      "layout": undefined,
      "title": "Metadata",
    },
  ],
  "variant": "view",
}
`;

exports[`Form Descriptors Snapshot Tests > Workspace Forms > should generate stable edit form descriptor > workspace-edit-form-descriptor 1`] = `
{
  "contract": "Workspace",
  "sections": [
    {
      "fields": [
        {
          "constraints": undefined,
          "description": "Workspace name",
          "fieldName": "name",
          "label": "Name",
          "layout": undefined,
          "readonly": false,
          "required": true,
          "type": "string",
          "widget": "text",
        },
      ],
      "id": "general",
      "layout": undefined,
      "title": "General",
    },
    {
      "fields": [
        {
          "constraints": undefined,
          "description": "Creation timestamp",
          "fieldName": "createdAt",
          "label": "Created At",
          "layout": undefined,
          "readonly": true,
          "required": true,
          "type": "datetime",
          "widget": "datetime-local",
        },
        {
          "constraints": undefined,
          "description": "Last update timestamp",
          "fieldName": "updatedAt",
          "label": "Updated At",
          "layout": undefined,
          "readonly": true,
          "required": true,
          "type": "datetime",
          "widget": "datetime-local",
        },
      ],
      "id": "timestamps",
      "layout": undefined,
      "title": "Timestamps",
    },
  ],
  "variant": "edit",
}
`;

exports[`Form Descriptors Snapshot Tests > Workspace Forms > should generate stable view form descriptor > workspace-view-form-descriptor 1`] = `
{
  "contract": "Workspace",
  "sections": [
    {
      "fields": [
        {
          "constraints": undefined,
          "description": "Unique identifier for the workspace",
          "fieldName": "id",
          "label": "Id",
          "layout": undefined,
          "readonly": true,
          "required": true,
          "type": "uuid",
          "widget": "text",
        },
        {
          "constraints": undefined,
          "description": "Workspace name",
          "fieldName": "name",
          "label": "Name",
          "layout": undefined,
          "readonly": false,
          "required": true,
          "type": "string",
          "widget": "text",
        },
      ],
      "id": "general",
      "layout": undefined,
      "title": "General",
    },
    {
      "fields": [
        {
          "constraints": undefined,
          "description": "Creation timestamp",
          "fieldName": "createdAt",
          "label": "Created At",
          "layout": undefined,
          "readonly": true,
          "required": true,
          "type": "datetime",
          "widget": "datetime-local",
        },
        {
          "constraints": undefined,
          "description": "Last update timestamp",
          "fieldName": "updatedAt",
          "label": "Updated At",
          "layout": undefined,
          "readonly": true,
          "required": true,
          "type": "datetime",
          "widget": "datetime-local",
        },
      ],
      "id": "timestamps",
      "layout": undefined,
      "title": "Timestamps",
    },
  ],
  "variant": "view",
}
`;
